<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="589dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btnRow1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRow2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/dash"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRow3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/star"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRow4"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_0"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/ce"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/slash"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRow5"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEqual"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/resultEdit"
        android:layout_width="418dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>